# projecthelper_cli

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md  formatting.md
projecthelpercli/: main.py  spec.py
projecthelpercli/services/: features.py  filesystem.py  renderer.py  template_loader.py
projecthelpercli/templates/api/: run.py.j2
projecthelpercli/templates/api/routers/v1/: __init__.py.j2
projecthelpercli/templates/test/: main.py.j2
