[project]
name = "projecthelpercli"
version = "0.1.0"
description = "CLI for rapidly startup projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "rich>=13.0.0",
]

[project.scripts]
helpercli = "projecthelpercli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
